--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -29,7 +29,7 @@ block content
                                     .col.s11
                                         input#inputUserProblem(type='text', placeholder='What would you like help with?') 
                                     .col.s1
-                                        a#btnAddUser(class="btn-floating waves-effect waves-light gray") 
+                                        a#btnAddUser(class="btn-floating waves-effect waves-light light-blue darken-3") 
                                             i(class="mdi-content-add")
 
 
