--- a/app/views/admin.jade
+++ b/app/views/admin.jade
@@ -12,9 +12,9 @@ block content
                             h5 Queue Management
                                                 
                         .row
-                            .dbBtn.a#btnFreezeQueue(class="waves-effect waves-light btn") Freeze
+                            .dbBtn.a#btnFreezeQueue(class="waves-effect waves-light btn light-blue darken-3") Freeze
                         .row
-                            .dbBtn.a#btnResetQueue(class="waves-effect waves-light btn") Clear
+                            .dbBtn.a#btnResetQueue(class="waves-effect waves-light btn light-blue darken-3") Clear
                         .row
                             h5 Email Alerts
                             .switch#emailAlertSwitch
@@ -31,10 +31,10 @@ block content
                             h5 Settings
                         .row
                             input#inputQueueName(type='text', placeholder='15-112')
-                            .dbBtn.a#btnChangeName(class="waves-effect waves-light btn") Change Title
+                            .dbBtn.a#btnChangeName(class="waves-effect waves-light btn light-blue darken-3") Change Title
                         .row
                             input#inputBulletin(type='text', placeholder='Yo')
-                            .dbBtn.a#btnInputBulletin(class="waves-effect waves-light btn") Update Message
+                            .dbBtn.a#btnInputBulletin(class="waves-effect waves-light btn light-blue darken-3") Update Message
 
 
 
