--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -25,14 +25,43 @@ h1 {
   font-size: 80px;
 }*/
 
-
-}
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   margin: 0 0 0 0;
   background-color: #E3DFDB;
   height:100%;
 }
+
+.switch label input[type=checkbox]:checked + .lever {
+  background-color: #0277bd;
+}
+
+.switch label input[type=checkbox]:checked + .lever:after {
+  background-color: #0277bd;
+}
+
+input[type=text]:focus {
+  border-bottom: 1px solid #0277bd;
+  box-shadow: 0 1px 0 0 #0277bd;
+}
+
+input[type=password]:focus {
+  border-bottom: 1px solid #0277bd;
+  box-shadow: 0 1px 0 0 #0277bd;
+}
+
+.input-field label {
+   color: #0277bd;
+ }
+ /* label focus color */
+ .input-field input[type=text]:focus + label {
+   color: #0277bd;
+ }
+ /* label underline focus color */
+ .input-field input[type=text]:focus {
+   border-bottom: 1px solid #0277bd;
+   box-shadow: 0 1px 0 0 #0277bd;
+ }
 
 .clearfix:after {
    content: " "; /* Older browser do not support empty content */
